--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,8 +108,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 
 [ModuleFileTracking]
-Stealth.TimeStamp=2021.04.25-21.03.38
-Stealth.LastCompileMethod=Runtime
+Stealth.TimeStamp=2021.04.25-23.09.25
+Stealth.LastCompileMethod=External
 PakFile.TimeStamp=2021.01.05-11.44.40
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.01.05-11.44.46
@@ -939,6 +939,8 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/StealthAI/BT_Agent.BT_Agent
+OpenAssetsAtExit=/Game/StealthAI/BB_Agent.BB_Agent
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1553,7 +1555,7 @@ PrimaryWidget_C.Clipping=True
 PrimaryWidget_C.Navigation=True
 PrimaryWidget_C.Localization=True
 PrimaryWidget_C.Default=True
-WorldSettings.AI=False
+WorldSettings.AI=True
 WorldSettings.LOD=False
 WorldSettings.Cooking=False
 BPc_Agent_C.AI chase=True
@@ -1720,9 +1722,9 @@ RecentlyPlaced=/Game/StealthAI/BPc_PatrolAgent.BPc_PatrolAgent;
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StealthAI/BPc_Agent
-MRUItem1=/Game/StealthAI/BT_Agent
-MRUItem2=/Game/Blueprints/PrimaryWidget
+MRUItem0=/Game/StealthAI/BT_Agent
+MRUItem1=/Game/Blueprints/PrimaryWidget
+MRUItem2=/Game/StealthAI/BPc_Agent
 MRUItem3=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter
 MRUItem4=/Game/StealthAI/BP_HUD
 MRUItem5=/Game/StealthAI/M_footprint
